--- a/CMS/html/admin_login.html
+++ b/CMS/html/admin_login.html
@@ -6,17 +6,17 @@
 <link rel="stylesheet" href="../css/app.css">
 <body>
 <div class="row">
-	<div class="large-12 columns">
+	<div class="large-4 medium-3 small-1 columns"><br></div>
 			<form action="class/login.php" method="post">
-			<div class="large-4 columns form">
-      				<label for="username" class="form">Username</label>
-      				<input name="username" id="username" type="text" class="form"/>
-      				<label for="password" class="form">Password</label>
-      				<input name="password" id="password" class="form" type="password"/>
-      				<input type="submit" value="Login" class="form" />
+			<div class="large-4 medium-6 small-10 columns form">
+      				<label for="username" class="">Username</label>
+      				<input name="username" id="username" type="text" class=""/>
+      				<label for="password" class="">Password</label>
+      				<input name="password" id="password" class="" type="password"/>
+      				<input type="submit" value="Login" class=" button" />
       		</div>
 			</form>
-	</div>
+	<div class="large-4 medium-3 small-1 columns"><br></div>
 </div>
 <script src="../js/vendor/jquery.js"></script>
 <script src="../js/foundation.min.js"></script>
